src/index.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;
* {
  font-family: "Montserrat", serif;
}
body {
  overflow-x: hidden;

  background: linear-gradient(
    90deg,
    rgba(23, 36, 79, 1) 0%,
    rgba(44, 143, 208, 1) 100%
  );
  color: white;
}

@layer utilities {
  .wrapper {
    @apply max-w-7xl mx-auto px-4;
  }
  .bannertext {
    @apply text-[2rem] md:text-[2rem] text-black font-bold leading-tight bg-gradient-to-r from-blue-500 to-purple-600 bg-clip-text text-transparent;
  }
  .paddingtop {
    @apply pt-[1rem] md:pt-[2rem];
  }
  .paddingbottom {
    @apply pb-[1rem] md:pb-[2rem];
  }
  .main-heading {
    @apply text-[2rem] md:text-[3rem] text-white font-bold leading-tight;
  }
  .active-link {
    @apply text-primary font-semibold;
  }
  .primary-btn {
    @apply bg-gradient-to-r text-base cursor-pointer font-medium from-blue-700 to-primary min-w-[9rem] flex justify-center text-center px-5 py-3 text-white rounded-full transition-all duration-300 hover:-translate-y-1;
  }
  .secondary-btn {
    @apply bg-[#5C5E60] text-base cursor-pointer font-medium min-w-[9rem] flex justify-center text-center px-5 py-3 text-white rounded-full transition-all duration-300 hover:-translate-y-1;
  }
  .blurred-red-circle {
    @apply bg-[#ee7cc245] rounded-full blur-3xl absolute;
  }
  .heading {
    @apply text-[2rem] md:text-5xl leading-tight font-semibold;
  }
  .description {
    @apply text-base font-light leading-relaxed;
  }
  .gradient-rounded-text-box {
    @apply px-4 py-3 rounded-full  min-w-[10rem] flex justify-center border text-[.9rem] w-fit bg-gradient-to-r from-white to-white/70 font-bold border-white bg-clip-text text-transparent;
  }
}

.loader {
  width: 48px;
  height: 48px;
  border-radius: 50%;
  display: inline-block;
  position: relative;
  border: 3px solid;
  border-color: #fff #fff transparent;
  box-sizing: border-box;
  animation: rotation 1s linear infinite;
}
.loader::after {
  content: "";
  box-sizing: border-box;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  margin: auto;
  border: 3px solid;
  border-color: transparent #0458f5 #3a6dcdba;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  animation: rotationBack 0.5s linear infinite;
  transform-origin: center center;
}

@keyframes rotation {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@keyframes rotationBack {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(-360deg);
  }
}

